--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "build:production": "npm run clean && npm run build",
     "build:dev": "webpack --progress --verbose --colors --display-error-details --config webpack.config.js",
     "start": "node server.js",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "ci-build": "npm run clean && npm run lint && npm run build"    
   },
   "devDependencies": {
+    "autoprefixer": "6.2.3",
     "babel-core": "6.3.26",
+    "babel-eslint": "5.0.0-beta9",
     "babel-loader": "6.2.1",
     "babel-plugin-react-transform": "2.0.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
@@ -20,6 +23,10 @@
     "babel-runtime": "5.8.25",
     "css-loader": "0.23.1",
     "envify": "3.4.0",
+    "eslint": "1.10.3",
+    "eslint-config-airbnb": "3.1.0",
+    "eslint-loader": "1.1.0",
+    "eslint-plugin-react": "3.16.1",
     "expect": "1.14.0",
     "exports-loader": "0.6.2",
     "extract-text-webpack-plugin": "1.0.1",
@@ -63,6 +70,7 @@
     "redux-form": "4.1.6",
     "redux-logger": "2.3.1",
     "redux-promise": "^0.5.3",
-    "redux-thunk": "1.0.3"
+    "redux-thunk": "1.0.3",
+    "superagent": "1.7.1"
   }
 }
