--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "redux-logger": "2.3.1",
     "redux-promise": "^0.5.3",
     "redux-thunk": "1.0.3",
-    "superagent": "1.7.1"
+    "superagent": "1.7.1",
+    "webpack": "1.12.12",
+    "webpack-dev-server": "1.14.1"
   }
 }
