--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "smart-banking",
   "version": "0.0.0",
   "scripts": {
-    "clean": "rimraf production\\dist",
     "build": "webpack --progress --verbose --colors --display-error-details --config webpack.production.config.js",
-    "build:production": "npm run clean && npm run lint && npm run build",
+    "build:production": "npm run clean && npm run build",
     "build:dev": "webpack --progress --verbose --colors --display-error-details --config webpack.config.js",
-    "start": "node server.js"
+    "start": "node app.js",
+    "clean": "rimraf dist",
+    "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js",
+    "ci-build": "npm run clean && npm run lint && npm run build"    
   },
-
   "devDependencies": {
     "autoprefixer": "6.2.3",
     "babel-core": "6.3.26",
@@ -53,6 +54,7 @@
   "dependencies": {
     "babel-polyfill": "6.3.14",
     "classnames": "2.2.3",
+    "express": "4.13.4",    
     "intl": "1.1.0",
     "lodash": "4.0.0",
     "moment": "2.11.1",
